# themaskoftruth

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  level.py  main.py  player.py  pyproject.toml  requirements_audio.txt  run_tests.py  speed_up_audio.py  test_poki.html  test_simple.py
levels/: default_level.json  level0.json  level1.json  level2.json  level3.json  level4.json  levels_config.json
src/the_floor_is_a_lie/: __init__.py  assets.py  config.py  game.py  level.py  level_editor.py  main.py  music.py  player.py  poki_sdk.py  score.py  sound_effects.py  test_gameplay.py  tile.py  ui.py
tests/: __init__.py  test_level.py  test_player.py  test_score.py
the_floor_is_a_lie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
themes/: game_over_theme.json  transparent_buttons.json
